[ACPI] handle BIOS with implicit C1 in _CST

The ASUS M6Ne specifies C2, implying C1
but not explicitly specifying it.

http://bugzilla.kernel.org/show_bug.cgi?id=4485

Signed-off-by: Janosch Machowinski <jmachowinski@gmx.de>
Signed-off-by: Venkatesh Pallipadi <venkatesh.pallipadi@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>